Moved news box from home page and into plain include.
Former-commit-id: 405e9b70ee3cac208f51ff50057dcec35a5dcbfb
Former-commit-id: 36119c2a4a79a0e78abf4e25108834fb3be98c1a
Former-commit-id: e69ac93a9f01247d1ef99dadcbf1f7961753ba81
Former-commit-id: 5f7a5393b52d98b8d26d3133448581a61fd2929c
Former-commit-id: c1aa4a2fdef929c15c39e5d460ca5cb7878214ab
Former-commit-id: d3a496ca95aeadeab224179ab570e763e50a2dc7

--- a/src/podiobooks/templates/themes/tim1/main/title/newsbox.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/newsbox.html
@@ -1,5 +1,5 @@
-<!-- Begin {{ infobox_id }} Infobox -->
-<div class="pb-infobox" id="{{ infobox_id }}">
+<!-- Begin Newsbox -->
+<div class="pb-infobox" id="podiobooksNewsBox" style="top: -481px;">
     <div class="pb-infobox-left">
     </div>
     <div class="pb-infobox-middle">
@@ -9,7 +9,9 @@
             News
         </div>
         <div id="news" name="news" style="line-height: 1.1; margin: -20px 0 0 0;">
-			<div style="margin: 5px 0 5px 0">Now Releasing:</div>
+            <div style="margin: 5px 0 5px 0">
+                Now Releasing:
+            </div>
             <ul style="list-style-type: circle; margin: 0 0 0 12px; padding: 0">
                 {% for title in nowreleasing_title_list|slice:":5" %}
                 <li style="margin: 8px 0 0 0">
@@ -17,8 +19,10 @@
                 </li>
                 {% endfor %}
             </ul>
-			<div style="margin: 10px 0 5px 0">Recently Complete:</div>
-			<ul style="list-style-type: circle; margin: 0 0 0 12px; padding: 0">
+            <div style="margin: 10px 0 5px 0">
+                Recently Complete:
+            </div>
+            <ul style="list-style-type: circle; margin: 0 0 0 12px; padding: 0">
                 {% for title in recentlycomplete_title_list|slice:":4" %}
                 <li style="margin: 8px 0 0 0">
                     <a href="{% url title_detail title.slug %}">{{ title.name }}</a>
@@ -32,4 +36,4 @@
 </div>
 <div class="pb-float-clear">
 </div>
-<!-- End {{ shelf_title }} Shelf -->
+<!-- End Newsbox -->
