Tweaks to base tags based on removal of search form, etc.
Former-commit-id: 7165d260272bd0b31160147df58d5a159da0ae73
Former-commit-id: 5f71c65e5b35c04297c678e5190f4a97ab8d8454
Former-commit-id: 600f5f09de25cb0ae33185e6a6d9af378d4c907b
Former-commit-id: 1292fb9b2372d5a11f0ccc09c97beb5ae964107b
Former-commit-id: 5c327edbc5fbdbe61cac8571f3cc84de0565cc50
Former-commit-id: 42f35ea2fbc2bae6e7a786726bd6b7c86a48dbf1

--- a/src/podiobooks/templates/base/main/shelf/tags/shelf_includes.html
+++ b/src/podiobooks/templates/base/main/shelf/tags/shelf_includes.html
@@ -14,9 +14,9 @@
         }
     });
 	
-	// Updates a shelf by changing the container ContentPane's href, triggering an XHR
+	// Updates the author shelf by changing the container ContentPane's href, triggering an XHR
     function contributorChange(shelf_id, shelf_url, dropdown_value){
-		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('contributor_slug',dropdown_value));
+		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('placeholder_slug',dropdown_value));
     }
 </script>
 <!-- End Shelf Includes -->
