--- a/src/podiobooks/templates/base/main/shelf/tags/show_shelf.html
+++ b/src/podiobooks/templates/base/main/shelf/tags/show_shelf.html
@@ -10,13 +10,13 @@
             <h2 style="float: left;">{{ shelf_title }}</h2>
 			{% if dropdown_values %}
 			<form class="pb-shelf-dropdown" action="{{ dropdown_url }}" name="{{ shelf_id }}" id="{{ shelf_id }}Dropdown">
-				<div style="height: 0px; width: 0px; overflow: hidden;"><label for="id_contributor">Select a Author to View Title</label></div>
+				<div class="pb-shelf-dropdown-label"><label for="id_contributor">Select a Author to View Title</label></div>
 				{{ dropdown_values.contributor }}
             </form>
 			<script type="text/javascript">
 				dojo.addOnLoad ( function() {
 					var dropdownValue = dojo.byId('id_contributor').value;
-					contributorChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
+					shelfChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
 				});
 			</script>
 			{% endif %}
