Changed id to reflect generic list nature of this tag.
Former-commit-id: a8b46ecc311736772a90d03214189261fca1e2c7
Former-commit-id: b5fb5a913a45896d7999c229565bc2d87c301502
Former-commit-id: b40a22bfcc484ebf3240cc4c089aee02417caa36
Former-commit-id: a34814d0133554c2612e64959e34723627176c8f
Former-commit-id: b02f9badb4043a1fc362e466ac68c3abfc35ed23
Former-commit-id: e8e32af75a36e2d6c1bec8194dbf9d6e7bae113e

--- a/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/tags/show_titlelist.html
@@ -3,7 +3,7 @@
     {% for title in title_list %}
     <li class="{% cycle 'row1' 'row2' %}" style="margin: 10px 0 30px 5px;">
         <img src="http://podiobooks.com/images/covers/{{ title.cover }}" height="150" width="100" alt="Title Cover for {{ title.name }}" style="float: left;">
-        <div id="titleSearchResultSummary" style="float: left; height:80px; margin: 5px 0 0 15px; width: 850px; font-size: 12px">
+        <div id="titleList" style="float: left; height:80px; margin: 5px 0 0 15px; width: 850px; font-size: 12px">
             <div style="font-size: 16px">
                 <a href="{{ title.get_absolute_url }}">{{ title.name }}</a>
             </div>
