Changed dropdown javascript to be generic.

--- a/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_shelf.html
@@ -16,7 +16,7 @@
 			<script type="text/javascript">
 				dojo.addOnLoad ( function() {
 					var dropdownValue = dojo.byId('id_contributor').value;
-					contributorChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
+					shelfChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
 				});
 			</script>
 			{% endif %}
