--- a/src/podiobooks/templates/themes/tim1/main/shelf/tags/shelf_includes.html
+++ b/src/podiobooks/templates/themes/tim1/main/shelf/tags/shelf_includes.html
@@ -16,8 +16,8 @@
     });
 	
 	// Updates a shelf by changing the container ContentPane's href, triggering an XHR
-    function contributorChange(shelf_id, shelf_url, dropdown_value){
-		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('contributor_slug',dropdown_value));
+    function shelfChange(shelf_id, shelf_url, dropdown_value){
+		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('placeholder_slug',dropdown_value));
     }
 </script>
 <!-- End Shelf Includes -->
