--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -19,12 +19,12 @@
 
 {% ad_placeholder %}
 
-{% url contributor_shelf 'contributor_slug' as contributor_dropdown_url %}
+{% url contributor_shelf 'placeholder_slug' as contributor_dropdown_url %}
 {% show_shelf 'authorSpotlightShelf' 'Author Spotlight - ' minimal_title_list contributor_choice_form contributor_dropdown_url 'pb-shelf' 3 %}
 
 {% show_shelf 'topRatedShelf' 'Top Rated Podiobooks' toprated_title_list '' '' 'pb-shelf' 3 %}
 
-{% show_infobox 'Podiobooks.com News' 'homePageInfobox' nowreleasing_title_list recentlycomplete_title_list %}
+{% include "main/title/newsbox.html" %}
 
 {% include "debug.html" %}
 
