--- a/src/podiobooks/templates/themes/tim1/main/title/detail.html
+++ b/src/podiobooks/templates/themes/tim1/main/title/detail.html
@@ -35,6 +35,8 @@
                 {{ title.detractor_count }}
             </div>
         </div>
+		<div class="pb-float-clear"></div>
+		<div style="margin: 40px 0 0 0"> Awards Placeholder </div>
     </div>
 </div>
 <div style="float:left; width: 558px; margin: 0 0 20px 20px" class="soria">
