Moved category picker down to shelf, added Search button to menubar.
Former-commit-id: 6a506272cd10500d28f12c3d0b8791612aa646b3
Former-commit-id: 1646d614333a2906097037252cad9d273c6fffb3
Former-commit-id: eb0d70be5793106bffe5e62cf0ea208acf2873d6
Former-commit-id: fc0be75571b5ebb9fcc55fe775f2c219f94a5494
Former-commit-id: 1b935d87f457986672f1c823b6d8b78e7e01a4f9
Former-commit-id: 640a0068e4de7dd255a485b554d0286f1ebadf86

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -83,6 +83,17 @@ ul {
 	float: left;
 }
 
+#pb-header-menubar .dijitButton,
+#pb-header-menubar .dijitButtonNode,
+#pb-header-menubar .dijitButtonContents,
+#pb-header-menubar .dijitInline,
+#pb-header-menubar button {
+	margin: 0 0 0 0;
+	border: none;
+	vertical-align: top;
+	background: transparent;
+}
+
 #pb-footer-text {
 	font-size: 11px;
 	width: 970px;
