--- a/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_shelf.html
+++ b/src/podiobooks/templates/themes/tim1/main/shelf/tags/show_shelf.html
@@ -10,12 +10,12 @@
             <h2 style="float: left;">{{ shelf_title }}</h2>
 			{% if dropdown_values %}
 			<form class="pb-shelf-dropdown" action="{{ dropdown_url }}" name="{{ shelf_id }}" id="{{ shelf_id }}Dropdown">
-				<div style="height: 0px; width: 0px; overflow: hidden;"><label for="id_contributor">Select a Author to View Title</label></div>
-				{{ dropdown_values.contributor }}
+				<div style="height: 0px; width: 0px; overflow: hidden;"><label for="id_{{ dropdown_field }}">Select a {{ dropdown_field }} to view titles</label></div>
+				{{ dropdown_values }}
             </form>
 			<script type="text/javascript">
 				dojo.addOnLoad ( function() {
-					var dropdownValue = dojo.byId('id_contributor').value;
+					var dropdownValue = dojo.byId('id_{{ dropdown_field }}').value;
 					shelfChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
 				});
 			</script>
