--- a/src/podiobooks/media/themes/pb2/css/shelf.css
+++ b/src/podiobooks/media/themes/pb2/css/shelf.css
@@ -133,16 +133,16 @@
 }
 
 .pb-shelf-item-rating {
-	background: url('../images/pb-thumbs-up-bar-tall.jpg') no-repeat;
+	background: url('../images/pb-thumbs-both.png') no-repeat;
 	position: absolute;
 	top: 119px;
 	left: 13px;
 	height: 48px;
 	width: 67px;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: bold;
 	text-align: center;
-	padding: 0 0 0 10px;
+	color: #000;
 	cursor: pointer;
 }
 
