--- a/src/podiobooks/templates/themes/pb2/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/detail_snippet.html
@@ -7,7 +7,7 @@
 	<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 	{% endif %}
 <div class="pb-shelf-item-rating">
-	{{ title.net_promoter_score }}%<div style="font-size: 10px; font-weight: normal; margin: -2px 0 0 -4px;">of {{ title.promoter_count|add:title.detractor_count }}</div>
+	<div style="float: left; width: 34px;">{{ title.promoter_count }}</div><div style="float: right; width: 33px; margin: 12px 0 0 0">{{title.detractor_count }}</div>
 </div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
