Centralized Ratings Display Logic/Styles
Former-commit-id: 9aab64a79d7dcaf311cab26a7b8b53a2025b931d
Former-commit-id: 3fa26b3e13a4504079dd8e8a6d038b9032cbfd05
Former-commit-id: bc3ee9a8ef8e3f851bb85bb5ee8592b3526fb0ab
Former-commit-id: eb105f84b0bc433f72ab3e463adfba29eeedeb24
Former-commit-id: f2f43b577a3a5721399a6db0acae75d9e6a07645
Former-commit-id: ffb47c5a331428a39bb1352db4d08e245b17e6ca

--- a/src/podiobooks/templates/themes/pb2/main/title/detail_snippet.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/detail_snippet.html
@@ -6,9 +6,9 @@
 {% else %}
 	<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 	{% endif %}
-<div class="pb-shelf-item-rating">
-	<div style="float: left; width: 34px;">{{ title.promoter_count }}</div><div style="float: right; width: 33px; margin: 12px 0 0 0">{{title.detractor_count }}</div>
-</div>
+	<div class="pb-shelf-item-rating">
+		<div class="item-rating item-rating-promoter">{{ title.promoter_count }}</div><div class="item-rating item-rating-detractor">{{ title.detractor_count }}</div>
+	</div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
         <a href="{% url title_detail title.slug %}" style="text-decoration:none;">{{ title.name|truncatewords_html:5 }}</a>
