--- a/src/podiobooks/templates/themes/pb2/main/title/detail.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/detail.html
@@ -3,9 +3,10 @@
 {% load title_templatetags %}
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/title-detail.css" >
-<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css" >
-<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/soria/soria.css">
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/title_detail.css">
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css">
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/ratings.css">
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">
 <script type="text/javascript">
     dojo.require('dijit.layout.TabContainer');
     dojo.require('dijit.layout.ContentPane');
@@ -21,23 +22,22 @@
 <div class="title-detail" style="margin: 0 0 30px 0;">
     <div style="float:left; text-align: center;">
         {% show_titlecover title %}
-        <div style="margin: 20px 0 0 20px;">
-            <div style="float: left;">
-                <img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-up.png" alt="Number of People Who Would Recommend This Book.">
-            </div>
-            <div style="float: left; margin: 2px 0 0 5px">
+        <div style="margin: 10px 0 0 30px; width: 90px;">
+            <div class="item-rating item-rating-promoter">
                 {{ title.promoter_count }}
             </div>
-            <div style="float: left; margin: 0 0 0 25px;">
-                <img src="{{ THEME_MEDIA_URL }}images/pb-thumbs-down.png" alt="Number of People Who Wouldn't Recommend This Book.">
-            </div>
-            <div style="float: left; margin: 2px 0 0 5px;">
+            <div class="item-rating item-rating-detractor">
                 {{ title.detractor_count }}
             </div>
+			<div class="pb-float-clear">
         </div>
-		<div class="pb-float-clear"></div>
-		<div style="margin: 40px 0 0 0"> Awards Placeholder </div>
     </div>
+    <div class="pb-float-clear">
+    </div>
+    <div style="margin: 40px 0 0 0">
+        Awards Placeholder 
+    </div>
+</div>
 </div>
 <div style="float:left; width: 558px; margin: 0 0 20px 20px" class="soria">
     <div style="font-size: 18px; font-weight: bold;">
@@ -65,7 +65,7 @@
 {% include "main/title/subscriptionbox.html" %}
 <div class="pb-float-clear">
 </div>
-<div class="soria" style="width: 100%; height: 500px; opacity: 0" id="bottomTabs">
+<div class="tundra" style="width: 100%; height: 500px; opacity: 0" id="bottomTabs">
     <div dojoType="dijit.layout.TabContainer" style="width: 100%; height: 100%;" id="bottomTabContainer">
         <div dojoType="dijit.layout.ContentPane" title="Chapters">
             {% if title.episode_set.all %}
