Massive rename to prepend model name to template names.  Added new browse by...drop down.
Former-commit-id: 6c15f114a1618a97bf8575bb6a8da93af11e8d16
Former-commit-id: fa78ec789caaf23e56582a4ed69afaeccddf2a0c
Former-commit-id: caf019fff1812bac25ce874e94fb42fa5ed3b9bf
Former-commit-id: d032abaaf081bc18ef0d11c8edc6dadc81dccef8
Former-commit-id: 6f0d014e8d6647c446f705be21b5a4a065c5eb66
Former-commit-id: bec3dd8a52334aaf7c20b1a0b936b0f43fd74eaf

--- a/src/podiobooks/media/themes/pb2/css/base.css
+++ b/src/podiobooks/media/themes/pb2/css/base.css
@@ -112,3 +112,38 @@ ul {
 	margin: 0 0 15px 10px;
 	text-align: center;
 }
+
+.pb-hidden-label {
+	height: 0px;
+	width: 0px;
+	overflow: hidden;
+}
+
+.pb-item-rating-promoter {
+	width: 34px;
+	height: 48px;
+	background: url('../images/pb-thumbs-both.png') no-repeat top left;
+	font-size: 11px;
+	font-weight: bold;
+	text-align: center;
+	color: #000;
+	float: left;
+}
+
+.pb-item-rating-detractor {
+	width: 33px;
+	height: 48px;
+	background: url('../images/pb-thumbs-both.png') no-repeat top right;
+	font-size: 11px;
+	font-weight: bold;
+	text-align: center;
+	color: #000;
+	float: right;
+	padding: 12px 0 0 0;
+}
+
+.pb-browseby-choice {
+	font-size: 14px;
+	background: #fff;
+	border: 1px solid #0054a6;
+}
