--- a/src/podiobooks/templates/base/main/title/detail.html
+++ b/src/podiobooks/templates/base/main/title/detail.html
@@ -38,7 +38,7 @@
 </li>
 </ul>
 {% if title.episode_set.all %}
-{% show_heading "Chapters" %}
+<h3>Chapters</h3>
 <br clear=all />
 <table class="table" cellpadding="0" border="0" cellspacing="0" align="center"> 
 			<colgroup> 
