--- a/src/podiobooks/templates/themes/pb2/header.html
+++ b/src/podiobooks/templates/themes/pb2/header.html
@@ -6,11 +6,11 @@
         <div id="pb-header-menubar">
             <div id="pb-header-menubar-items">
                 <a href="http://podiobooks.com/about.php">FAQ</a>
-                | <a href="http://www.podiobooks.com/authors.php">Authors</a>
                 | <a href="http://www.podiobooks.com/blog">Blog</a>
                 | <a href="http://community.podiobooks.com/">Community</a>
             </div>
             {% show_searchbox %}
+			{% show_browsebox %}
         </div>
     </div>
 </div>
