--- a/src/podiobooks/templates/themes/pb2/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/tags/show_titlelist.html
@@ -13,6 +13,14 @@
             <div style="font-size: 13px; margin: 0 0 7px 0;">
                 {% show_categories title %}
             </div>
+            <div class="pb-shelf-item-rating">
+                <div class="item-rating item-rating-promoter">
+                    {{ title.promoter_count }}
+                </div>
+                <div class="item-rating item-rating-detractor">
+                    {{ title.detractor_count }}
+                </div>
+            </div>
             <div style="clear: both;">
                 {% autoescape off %}{{ title.description|striptags|truncatewords_html:100 }}{% endautoescape %} <a href="{{ title.get_absolute_url }}">[more]</a>
             </div>
