--- a/src/podiobooks/templates/themes/pb2/main/title/title_detail_snippet.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/title_detail_snippet.html
@@ -7,7 +7,7 @@
 	<img class="pb-shelf-item-cover-image" src="{% cover_media_url %}images/covers/67x99/{{ title.cover }}" width="67" height="99" alt="Podiobook Cover for {{ title.name }}"/></a>
 	{% endif %}
 	<div class="pb-shelf-item-rating">
-		<div class="item-rating item-rating-promoter">{{ title.promoter_count }}</div><div class="item-rating item-rating-detractor">{{ title.detractor_count }}</div>
+		<div class="pb-item-rating-promoter">{{ title.promoter_count }}</div><div class="pb-item-rating-detractor">{{ title.detractor_count }}</div>
 	</div>
 <div class="pb-shelf-item-text">
     <p class="pb-shelf-item-title">
