--- a/src/podiobooks/templates/themes/pb2/header.html
+++ b/src/podiobooks/templates/themes/pb2/header.html
@@ -5,7 +5,8 @@
         </div>
         <div id="pb-header-menubar">
             <div id="pb-header-menubar-items">
-                <a href="http://podiobooks.com/about.php">FAQ</a>
+            	<a href="/">Home</a>
+                | <a href="http://podiobooks.com/about.php">FAQ</a>
                 | <a href="http://www.podiobooks.com/blog">Blog</a>
                 | <a href="http://community.podiobooks.com/">Community</a>
             </div>
