--- a/src/podiobooks/templates/themes/pb2/main/title/title_detail.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/title_detail.html
@@ -34,12 +34,12 @@
     </div>
     <div class="pb-float-clear">
     </div>
-    <div style="margin: 40px 0 0 0">
-        Awards Placeholder 
+    <div style="margin: 5px 0 0 15px; height: 100px; width: 100px;">
+        {% show_awardshow title %}
     </div>
 </div>
 </div>
-<div style="float:left; width: 558px; margin: 0 0 20px 20px" class="soria">
+<div style="float:left; width: 558px; margin: 0 0 20px 20px" class="tundra">
     <div style="font-size: 18px; font-weight: bold;">
         {{ title.name }}
     </div>
