--- a/src/podiobooks/templates/themes/pb2/main/category/category_list.html
+++ b/src/podiobooks/templates/themes/pb2/main/category/category_list.html
@@ -8,7 +8,7 @@
 </h1>
 <ul style="margin: 0 0 0 40px">
   {% for category in category_list %} 
-  <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.title_set.all.count }} titles</li>
+  <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.title_set.all.count }} title{{ category.title_set.all.count|pluralize }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
