--- a/src/podiobooks/templates/themes/pb2/main/contributor/contributor_list.html
+++ b/src/podiobooks/templates/themes/pb2/main/contributor/contributor_list.html
@@ -13,7 +13,7 @@
 </h1>
 <ul>
   {% for contributor in contributor_list %} 
-  <li class="contributor_list_item"><a href="{{contributor.get_absolute_url}}">{{ contributor.display_name }}</a> - {{ contributor.title_set.all.count }} title{{ contributor.title_set.all.count|pluralize }}</li>
+  <li class="contributor_list_item"><a href="{% ifequal contributor.title_set.all.count 1 %} {% url title_detail slug=contributor.title_set.all|first %} {% else %} {{contributor.get_absolute_url}} {% endifequal %}">{{ contributor.display_name }}</a> - {{ contributor.title_set.all.count }} title{{ contributor.title_set.all.count|pluralize }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
