--- a/src/podiobooks/templates/themes/pb2/main/title/tags/show_titlelist.html
+++ b/src/podiobooks/templates/themes/pb2/main/title/tags/show_titlelist.html
@@ -2,7 +2,7 @@
 <ul>
     {% for title in title_list %}
     <li class="{% cycle 'row1' 'row2' %}" style="margin: 15px 0 30px 5px;">
-        <img src="http://podiobooks.com/images/covers/{{ title.cover }}" height="150" width="100" alt="Title Cover for {{ title.name }}" style="float: left;">
+        <img src="http://podiobooks.com/images/covers/{{ title.cover }}" height="150" width="100" alt="Cover for {{ title.name }}" style="float: left;">
         <div id="titleList" style="float: left; height:80px; margin: 5px 0 0 15px; width: 850px; font-size: 12px">
             <div style="font-size: 16px">
                 <a href="{{ title.get_absolute_url }}">{{ title.name }}</a>
@@ -16,6 +16,11 @@
             <div style="clear: both;">
                 {% autoescape off %}{{ title.description|striptags|truncatewords_html:80 }}{% endautoescape %} <a href="{{ title.get_absolute_url }}">[more]</a>
             </div>
+			{% if title.sphinx %}
+			<div style="font-size: 9px; font-style: italic">
+				Search Result Weight: {{ title.sphinx.weight }}
+			</div>
+			{% endif %}
         </div>
         <div class="pb-float-clear">
         </div>
