First cut at adding descriptive hover pane back to home page.  Needs serious CSS help.

--- a/src/podiobooks/templates/themes/pb2/main/shelf/tags/shelf_includes.html
+++ b/src/podiobooks/templates/themes/pb2/main/shelf/tags/shelf_includes.html
@@ -4,6 +4,7 @@
     dojo.require("pbwidgets.book_shelf.BookShelf");
 	dojo.require("dijit.layout.StackController");
     dojo.require("dijit.layout.ContentPane");
+	dojo.require("pbwidgets.book_desc.BookDesc");
 	
 	// Windows Chrome Button Padding Fix
     dojo.addOnLoad(function(){
