Meager attempt to add stylesheet...not much help.
Former-commit-id: c5787f5135ce8bdfc5d8bf840e06f4df796698d0
Former-commit-id: 2e37b05d564f69795ab118b5ad2217815f740ede
Former-commit-id: 14cb31995f8b6905b69654409f8bde73b2fd4224
Former-commit-id: 8ac3231c3ae32201568f7bfa78f5c5db4f2ddd70
Former-commit-id: 011574fa00e1e1bceb536475c7b74b0f01145cf8
Former-commit-id: e019a47b4317c6b22d58ed0ed7c754e22835825e

--- a/src/podiobooks/templates/themes/pb2/main/shelf/tags/shelf_includes.html
+++ b/src/podiobooks/templates/themes/pb2/main/shelf/tags/shelf_includes.html
@@ -1,5 +1,6 @@
 <!-- Begin Shelf Includes -->
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css" >
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}js/pbwidgets/book_desc/BookDesc.css" >
 <script type="text/javascript">
     dojo.require("pbwidgets.book_shelf.BookShelf");
 	dojo.require("dijit.layout.StackController");
