--- a/src/podiobooks/templates/themes/pb2/footer.html
+++ b/src/podiobooks/templates/themes/pb2/footer.html
@@ -19,4 +19,5 @@
         See legal notes for audio file rights.
     </div>
 </div>
+<script type=text/javascript src='{{MEDIA_URL}}/js/pbwidgets/browse.js'></script>
 <!-- End Footer -->
