--- a/src/podiobooks/templates/themes/pb2/main/tags/show_searchbox.html
+++ b/src/podiobooks/templates/themes/pb2/main/tags/show_searchbox.html
@@ -1,4 +1,4 @@
-<div id="menuBarSearchform" style="display:inline;float:right;margin: 2px 0 0 7px;">
+<div id="menuBarSearchform">
     <form action="{% url title_search %}" method="POST" style="display:inline;">
         <label for="id_keywords" style="font-weight:bold;">
             Search for
