--- a/src/podiobooks/templates/themes/pb2/main/tags/show_browsebox.html
+++ b/src/podiobooks/templates/themes/pb2/main/tags/show_browsebox.html
@@ -1,5 +1,5 @@
 <div class='browseby-links'>
-	<strong>Browse:</strong>
+	<p><strong>Browse:</strong></p>
 	<ul>
 		<li><a class='browseby pb-browsey-author' title='Browse by Author' href='{% url contributor_list %}'>Author</a></li>
 		<li><a class='browseby pb-browsey-category' title='Browse by Category' href='{% url category_list %}'>Category</a></li>
