Added paging for dropdown browse menus.
I probably want to make it a fadein/fadeout effect later.


Former-commit-id: e3a696a1e7f007a72c7fb4a995ebc2ff41653678
Former-commit-id: e6f2cee1d6920d685eadf510f058df5e5ff7f12b
Former-commit-id: cb0d07c2a22e3839992036fcc27581073d874812
Former-commit-id: 7f45c68843792834b76810d53127fdced4ab6020
Former-commit-id: 97cddafd0318b8dcbfe9e1fb0cdbf4a6b7930ebc
Former-commit-id: 053cce0bf88df3aa3f7c9ed2cadf0b69ba6e1b96

--- a/src/podiobooks/media/themes/pb2/css/base.css
+++ b/src/podiobooks/media/themes/pb2/css/base.css
@@ -215,3 +215,17 @@ ul {
 {
 	text-decoration:none;
 }
+
+.pb-browseby-lists-pagers
+{
+	font-size:14px;
+	color:#fff;
+	float:right;
+}
+.pb-browseby-lists-pager:hover{
+	color#000;
+}
+.pb-browseby-lists-pager
+{
+	cursor:pointer;
+}
