--- a/src/podiobooks/templates/themes/pb2-jq/main/index.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/index.html
@@ -5,15 +5,36 @@
 {% block headtitle %}{{ site_name }} - Free Downloadable Audiobooks{% endblock %}
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css">
-{% shelf_includes %}
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css" >
 {% endblock %}
 {% block content %}
-{% url category_shelf 'placeholder_slug' as category_dropdown_url %} 
-{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form.category category_dropdown_url 'category' 'pb-shelf-featured' 4 %} 
+
+{% url category_shelf 'placeholder_slug' as category_dropdown_url %}
+{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category' featured_title_list category_choice_form 'pb-shelf-featured' 4 %} 
+
+<!-- Begin JavaScript Includes for Shelf Interactivity -->
+<script src="{{ MEDIA_URL }}js/jquery/js/jcarousellite_1.0.1.pack.js"></script>
+<script src="{{ MEDIA_URL }}js/pbwidgets/book_shelf/book_shelf_jq.js"></script>
+<script src="{{ MEDIA_URL }}js/jquery/js/jquery.appear-1.1.1-min.js"></script>
+<!-- End JavaScript Includes for Shelf Interactivity -->
+
+<!-- Begin JavaScript to Attach Interactivity to Shelves -->
 <script type="text/javascript">
-    /* Attach a jCarousel Widget to the Featured Shelf, setting the divs on either end as buttons */
+    /* On page ready, attach a jCarousel Widget to the Featured Shelf, setting the divs on either end as buttons */
     $(function(){
     	attachCarousel('featuredPodiobooksShelf', 4);
+		//Trigger a reload of the shelf for the particular downdown value
+		var dropdownValue = $('#id_category').val();
+		//shelfChange('{{ shelf_id }}', '{{ dropdown_url }}', dropdownValue);
     });
+	// Updates a shelf by changing doing an AJAX call to load new pages into the shelf - called from shelf dropdowns
+    function shelfChange(shelf_id, shelf_url, dropdown_value){
+		$('#' + shelf_id + 'PageContainer').load(shelf_url.replace('placeholder_slug', dropdown_value),
+			function() {
+				attachCarousel(shelf_id, 4);
+			}
+		);
+    }
 </script>
+<!-- End JavaScript to Attach Interactivity to Shelves -->
 {% endblock %}
