--- a/src/podiobooks/templates/themes/pb2/main/index.html
+++ b/src/podiobooks/templates/themes/pb2/main/index.html
@@ -8,25 +8,47 @@
 {% block head %}
 
 <link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/infobox.css" >
-
-{% shelf_includes %}
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/shelf.css" >
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}js/pbwidgets/book_desc/BookDesc.css" >
 
 {% endblock %}
 
 {% block content %}
 
-{% url category_shelf 'placeholder_slug' as category_dropdown_url %}
-{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category - ' featured_title_list category_choice_form.category category_dropdown_url 'category' 'pb-feature-shelf' 4 %}
+{% url title_category_shelf 'placeholder_slug' as category_dropdown_url %}
+{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks by Category - ' featured_title_list category_choice_form 'pb-feature-shelf' 4 %}
 
 {% ad_placeholder %}
 
-{% url contributor_shelf 'placeholder_slug' as contributor_dropdown_url %}
-{% show_shelf 'authorSpotlightShelf' 'Author Spotlight - ' minimal_title_list contributor_choice_form.contributor contributor_dropdown_url 'contributor' 'pb-shelf' 3 %}
+{% url title_contributor_shelf 'placeholder_slug' as contributor_dropdown_url %}
+{% show_shelf 'authorSpotlightShelf' 'Author Spotlight - ' minimal_title_list contributor_choice_form 'pb-shelf' 3 %}
 
-{% show_shelf 'topRatedShelf' 'Top Rated Podiobooks' toprated_title_list '' '' '' 'pb-shelf' 3 %}
+{% show_shelf 'topRatedShelf' 'Top Rated Podiobooks' toprated_title_list '' 'pb-shelf' 3 %}
 
 {% include "main/title/title_newsbox.html" %}
 
-{% include "debug.html" %}
+<!-- Begin Shelf Includes -->
+<script type="text/javascript">
+    dojo.require("pbwidgets.book_shelf.BookShelf");
+	dojo.require("dijit.layout.StackController");
+    dojo.require("dijit.layout.ContentPane");
+	dojo.require("pbwidgets.book_desc.BookDesc");
+	
+	// Windows Chrome Button Padding Fix
+    dojo.addOnLoad(function(){
+        if (dojo.isChrome && (navigator.appVersion.indexOf("Win") != -1)) {
+            dojo.query(".pb-shelf-controller-icon").style({
+                "margin-top": "-1px",
+                "margin-left": "-3px",
+            });
+        }
+    });
+	
+	// Updates a shelf by changing the container ContentPane's href, triggering an XHR
+    function shelfChange(shelf_id, shelf_url, dropdown_value){
+		dijit.byId(shelf_id+'Container').attr('href', shelf_url.replace('placeholder_slug', dropdown_value));
+    }
+</script>
+<!-- End Shelf Includes -->
 
 {% endblock %}
